--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -30,8 +30,9 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donations</a></li>
+			<li><a href="donators.html">Donators</a></li>
             <li><a href="services.html">Services</a></li>
-			      <li><a class="current_page" href="sponsors.html">Sponsors</a></li>
+			<li><a class="current_page" href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
