--- a/src/donate.html
+++ b/src/donate.html
@@ -30,6 +30,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a class="current_page" href="donate.html">Donations</a></li>
+			<li><a href="donators.html">Donators</a></li>
             <li><a href="services.html">Services</a></li>
 			<li><a href="sponsors.html">Sponsors</a></li>
           </ul>
