--- a/src/support.html
+++ b/src/support.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Act For Kids | Home</title>
+    <title>Act For Kids | Developers</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
   </head>
@@ -30,9 +30,9 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donations</a></li>
-			<li><a href="donators.html">Donators</a></li>
+			      <li><a href="donators.html">Donators</a></li>
             <li><a href="services.html">Services</a></li>
-			<li><a href="sponsors.html">Sponsors</a></li>
+			      <li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
