--- a/src/donators.html
+++ b/src/donators.html
@@ -40,41 +40,46 @@
       <div id="page">
     		<div id="content">
           <div class="title">
-            <h1>Support The Development Team!</h1>
-            <p>Thanks for browsing through our site, we hope you enjoyed it. All this was made possible thanks to the brlliant developers from the Iron Squad at QAT. Feel free to help us out by donating to the induviduals who put this site together. Thanks for your support :)
+            <h1>Thanks to All of Our Wonderfull Donators!</h1>
+            <p>We at Act for Kids would like to thank all of our wonderfull donators for their generous contributions to act for kids to support our cause.</p>
           </div>
           <div class="support-grid">
+			<h2>Monthly Donators</h2>
             <table>
   					  <tr>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\matt.jpg" alt="" /></a>
-                  <h3>Matt Llamas</h3>
-                  <p>GitHub co-ordinator<a href="media/clip/gits.mp4">,</a> mainframe and backend designer</p>
+                  <h3>Jon Doe #1</h3>
+                  <p>Monthly Donation: 150 Total Donated: 600</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\cayton.jpg" alt="" /></a>
-                  <h3>Cayton Browne</h3>
+                  <h3>Jon Doe #2</h3>
                   <p>Page designer, styling specialist and template analyst</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\parth.jpg" alt="" /></a>
-                  <h3>Parth Vijaydhar</h3>
+                  <h3>Jane Doe #1</h3>
                   <p>Page designer and wireframming developer</p>
                 </td>
               </tr>
+			</table>
+			<h2> Single Payment Donators
+			<br></br>
+			<table>
               <tr>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\anthony.jpg" alt="" /></a>
-                  <h3>Anthony Calvillo</h3>
-                  <p>Page designer, donations manager and site map integrator</p>
+                  <h3>Jon Doe #3</h3>
+                  <p>Recently Donated: 150 Total Donated: 450</p>
                 </td><td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\josh.jpg" alt="" /></a>
-                  <h3>Joshua Deckert</h3>
+                  <h3>Jane Doe #2</h3>
                   <p>Page designer, sponsorship co-ordinator</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\daniel.jpg" alt="" /></a>
-                  <h3>Daniel Zantho</h3>
+                  <h3>Jane Doe #3</h3>
                   <p>Team leader, page and graphic designer</p>
                 </td>
               </tr>
