--- a/src/donators.html
+++ b/src/donators.html
@@ -50,17 +50,17 @@
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\matt.jpg" alt="" /></a>
                   <h3>Jon Doe #1</h3>
-                  <p>Monthly Donation: 150 Total Donated: 600</p>
+                  <p>Monthly Donation: $150 Total Donated: $600</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\cayton.jpg" alt="" /></a>
                   <h3>Jon Doe #2</h3>
-                  <p>Page designer, styling specialist and template analyst</p>
+                  <p>Monthly Donation: $50 Total Donated: $350</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\parth.jpg" alt="" /></a>
                   <h3>Jane Doe #1</h3>
-                  <p>Page designer and wireframming developer</p>
+                  <p>Monthly Donation: $25 Total Donated: $150</p>
                 </td>
               </tr>
 			</table>
@@ -71,16 +71,16 @@
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\anthony.jpg" alt="" /></a>
                   <h3>Jon Doe #3</h3>
-                  <p>Recently Donated: 150 Total Donated: 450</p>
+                  <p>Recently Donated: $150 Total Donated: $450</p>
                 </td><td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\josh.jpg" alt="" /></a>
                   <h3>Jane Doe #2</h3>
-                  <p>Page designer, sponsorship co-ordinator</p>
+                  <p>Recently Donated: $50 Total Donated: $250</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\daniel.jpg" alt="" /></a>
                   <h3>Jane Doe #3</h3>
-                  <p>Team leader, page and graphic designer</p>
+                  <p>Recently Donated: $25 Total Donated: $100</p>
                 </td>
               </tr>
             </table>
