--- a/src/donators.html
+++ b/src/donators.html
@@ -40,8 +40,8 @@
       <div id="page">
     		<div id="content">
           <div class="title">
-            <h1>Thanks to All of Our Wonderfull Donators!</h1>
-            <p>We at Act for Kids would like to thank all of our wonderfull donators for their generous contributions to act for kids to support our cause.</p>
+            <h1>Thanks to All of Our Wonderful Donators!</h1>
+            <p>We at Act for Kids would like to thank all of our wonderful donators for their generous contributions to act for kids to support our cause.</p>
           </div>
           <div class="support-grid">
 			<h2>Monthly Donators</h2>
