ANOTHER donator update
made donator picture have different colour border

--- a/src/donators.html
+++ b/src/donators.html
@@ -43,7 +43,7 @@
             <h1>Thanks to All of Our Wonderful Donators!</h1>
             <p>We at Act for Kids would like to thank all of our wonderful donators for their generous contributions to act for kids to support our cause.</p>
           </div>
-          <div class="support-grid">
+          <div class="donator-grid">
 			<h2>Monthly Donators</h2>
             <table>
   					  <tr>
