--- a/src/about.html
+++ b/src/about.html
@@ -45,16 +45,19 @@
           </div>
           <div class="thirds">
             <div>
+			<br>
               <h3>Our Purpose</h3>
-              <p>To prevent and treat child abuse and neglect.</p>
+              <p><center>To prevent and treat child abuse and neglect.</center></p>
             </div>
             <div>
+			<br>
               <h3>Our Vision</h3>
-              <p>All kids have a safe and happy childhood, free from abuse and neglect.</p>
+              <p><center>All kids have a safe and happy childhood, free from abuse and neglect.</center></p>
             </div>
             <div>
+			<br>
               <h3>Our Values</h3>
-              <p>We are a professional, ethical team who is caring, courageous and collaborative.</p>
+              <p><center>We are a professional, ethical team who is caring, courageous and collaborative.</center></p>
             </div>
           </div>
     		</div>
