added social media links to footer

--- a/src/contact.html
+++ b/src/contact.html
@@ -139,25 +139,21 @@ general inquiry about making a donation please contact us below:</h4></span></di
 			<br>
 			<br>
 			<div id="socialmedia">
-			<center><h2>Join us on Social Media</center> </h2></div>
-			<p>
+			<p><b>Join us on Social Media</b></p>
+			
 			<center><a href="https://www.facebook.com/ActforKids/">
-			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="65px" height="55px">
+			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
 			</a>
 			<a href="https://twitter.com/ACTforKids">
-			<img border="0" alt="twitter widget" src="images/twitter widget.jpg" width="65px" height="55px">
+			<img border="0" alt="twitter widget" src="images/twitter widget.jpg" width="45px" height="35px">
 			</a>
 			<a href="https://www.instagram.com/actforkids/">
-			<img border="0" alt="instagram widget" src="images/instagram widget.jpg" width="65px" height="55px">
+			<img border="0" alt="instagram widget" src="images/instagram widget.jpg" width="45px" height="35px">
 			</a>
 			<a href="https://www.youtube.com/user/ACTforKids">
-			<img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="65px" height="55px">
+			<img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="45px" height="35px">
 			</center></a>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
+			</div>	
    		</div>
 			</div>
 		</div>
