--- a/src/donate.html
+++ b/src/donate.html
@@ -52,6 +52,12 @@
 						<br>
 						<br>
 						<br>
+						<span class="byline">Every donation helps kids all over Australia. By donating, you will have a place in the donator's wall of fame. 
+						<br>
+						<h4>You can send your donation to us in different ways. Find out how you can <a href="donate-offline.html">donate offline</a>&nbsp;or&nbsp;call 1300 228 000</h4>
+						<br>
+						<br>
+						<br>
 						<iframe id="iframeform" class="iframe" src="https://support.actforkids.com.au/iframe-donation-form" width="900" height="2500" frameborder="0" scrolling="no">&lt;br /&gt; iFrame not supported.&lt;br /&gt; </iframe>
     			
 	<div id="socialmedia">
