--- a/src/donate.html
+++ b/src/donate.html
@@ -30,33 +30,24 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a class="current_page" href="donate.html">Donations</a></li>
-			<li><a href="donators.html">Donators</a></li>
+			      <li><a href="donators.html">Donators</a></li>
             <li><a href="services.html">Services</a></li>
-			<li><a href="sponsors.html">Sponsors</a></li>
+			      <li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
     	</div>
-    	<div id="page">
-    		<div id="content">
-    			<div>
-    				<div class="title">
-    					<h1>Make a Donation</h1>
-    					<span class="byline">Every little bit helps. Act for Kids relies heavily on donations to support our intensive therapy programs for kids who have experienced abuse and neglect, and early support for families at risk. Your donation will help us keep our doors open and expand our services – our kids can’t thank you directly, but know you’ve made a big difference to little lives.</span> </div>
-						<br>
-						<h3>Single Donation</h3>
-						<span class="byline">Donations over $2 are tax deductible. Every donation, big or small, combines to make a real difference.</span> </div>
-						<br>
-						<h3>Monthly Donation</h3>
-						<span class="byline">Becoming a Kids’ Crusader and donating monthly is the best way to help us help kids and families</span> </div>
-						<br>
-						<br>
-						<br>
-						<iframe id="iframeform" class="iframe" src="https://support.actforkids.com.au/iframe-donation-form" width="900" height="2500" frameborder="0" scrolling="no">&lt;br /&gt; iFrame not supported.&lt;br /&gt; </iframe>
-    			</div>
-    		</div>
+  		<div id="content">
+				<div class="title">
+					<h1>Make a Donation</h1>
+					<p>Every little bit helps. Act for Kids relies heavily on donations to support our intensive therapy programs for kids who have experienced abuse and neglect, and early support for families at risk. Your donation will help us keep our doors open and expand our services – our kids can’t thank you directly, but know you’ve made a big difference to little lives.</p>
+					<h3>Single Donation</h3>
+					<p>Donations over $2 are tax deductible. Every donation, big or small, combines to make a real difference.</p>
+        	<h3>Monthly Donation</h3>
+					<p>Becoming a Kids’ Crusader and donating monthly is the best way to help us help kids and families</p>
         </div>
-    	</div>
+				<iframe class="donate-iframe" src="https://support.actforkids.com.au/iframe-donation-form" scrolling="no">&lt;br /&gt; iFrame not supported.&lt;br /&gt; </iframe>
+			</div>
     </div>
     <div id="copyright">
    	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
