--- a/src/donate-offline.html
+++ b/src/donate-offline.html
@@ -94,8 +94,9 @@ Qld 4064</p>
 		<br>
 		<br>
 		<br>
-		<div id="socialmedia">
-			<center><h5>Join us on Social Media</center> </h5></div>
+	<div id="socialmedia">
+			<p><b>Join us on Social Media</b></p>
+			
 			<center><a href="https://www.facebook.com/ActforKids/">
 			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
 			</a>
@@ -108,8 +109,11 @@ Qld 4064</p>
 			<a href="https://www.youtube.com/user/ACTforKids">
 			<img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="45px" height="35px">
 			</center></a>
+	</div>	
    		</div>
 			</div>
+		</div>
+		</div>
     </div>
     <div id="copyright">
    	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
