--- a/src/contact.html
+++ b/src/contact.html
@@ -139,7 +139,7 @@ general inquiry about making a donation please contact us below:</h4></span></di
 			<br>
 			<br>
 			<div id="socialmedia">
-			<p><b>Join us on Social Media</b></p>
+			<p><b><center>Join us on Social Media</center></b></p>
 			
 			<center><a href="https://www.facebook.com/ActforKids/">
 			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
