Donators Page IS DONE

--- a/src/donators.html
+++ b/src/donators.html
@@ -30,9 +30,9 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donations</a></li>
-			      <li><a class="current_page" href="donators.html">Donators</a></li>
+			<li><a class="current_page" href="donators.html">Donators</a></li>
             <li><a href="services.html">Services</a></li>
-			      <li><a href="sponsors.html">Sponsors</a></li>
+			<li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
@@ -43,70 +43,24 @@
             <h1>Thanks to All of Our Wonderful Donators!</h1>
             <p>We at Act for Kids would like to thank all of our wonderful donators for their generous contributions to act for kids to support our cause.</p>
           </div>
-<<<<<<< HEAD
-          <div class="support-grid">
-			      <h2>Monthly Donators</h2>
-=======
           <div class="donator-grid">
 			<h2>Monthly Donators</h2>
->>>>>>> b356a4334661f50a780012a3bf84dd4923328e26
             <table>
 				<tr>
                 <td>
-<<<<<<< HEAD
-                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\matt.jpg" alt="" /></a>
-                  <h3>Jon Doe #1</h3>
-                  <p>Monthly Donation: $150</p>
-				          <p>Total Donated: $600</p>
-                </td>
-                <td>
-                  <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\cayton.jpg" alt="" /></a>
-                  <h3>Jon Doe #2</h3>
-                  <p>Monthly Donation: $50</P>
-				          <p>Total Donated: $350</p>
-                </td>
-                <td>
-                  <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\parth.jpg" alt="" /></a>
-                  <h3>Jane Doe #1</h3>
-                  <p>Monthly Donation: $25</p>
-				          <p>Total Donated: $150</p>
-                </td>
-              </tr>
-    			  </table>
-      			<h2> Single Payment Donators
-      			<table>
-              <tr>
-                <td>
-                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\anthony.jpg" alt="" /></a>
-                  <h3>Jon Doe #3</h3>
-                  <p>Recently Donated: $150</p>
-    				      <p>Total Donated: $450</p>
-                </td>
-                <td>
-                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\josh.jpg" alt="" /></a>
-                  <h3>Jane Doe #2</h3>
-                  <p>Recently Donated: $50</p>
-    				      <p>Total Donated: $250</p>
-                </td>
-                <td>
-                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\daniel.jpg" alt="" /></a>
-                  <h3>Jane Doe #3</h3>
-                  <p>Recently Donated: $25</p>
-    				      <p>Total Donated: $100</p>
-=======
-					<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\matt.jpg" alt="" /></a>
+					<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\jamie seymour.jpg" alt="" /></a>
 					<h3>Jamie Seymour</h3>
 					<p>Monthly Donation: $150</p>
 					<p>Total Donated: $600</p>
                 </td>
                 <td>
-					<a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\cayton.jpg" alt="" /></a>
+					<a href="https://www.paypal.me/mattllamas/50"/><img src="images\donators\kristal lawerenz.jpg" alt="" /></a>
 					<h3>Kristal Lawerenz</h3>
 					<p>Monthly Donation: $50</P>
 					<p>Total Donated: $350</p>
                 </td>
                 <td>
-					<a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\parth.jpg" alt="" /></a>
+					<a href="https://www.paypal.me/mattllamas/50"/><img src="images\donators\jelena martin.jpg" alt="" /></a>
 					<h3>Jelena Martin</h3>
 					<p>Monthly Donation: $25</p>
 					<p>Total Donated: $150</p>
@@ -114,23 +68,22 @@
 			</tr>
 							<tr>
                 <td>
-					<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\matt.jpg" alt="" /></a>
+					<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\roseann maceachern.jpg" alt="" /></a>
 					<h3>Roseann MacEachern</h3>
 					<p>Monthly Donation: $150</p>
 					<p>Total Donated: $600</p>
                 </td>
                 <td>
-					<a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\cayton.jpg" alt="" /></a>
+					<a href="https://www.paypal.me/mattllamas/50"/><img src="images\donators\merrick curtis.jpg" alt="" /></a>
 					<h3>Merrick Curtis</h3>
 					<p>Monthly Donation: $50</P>
 					<p>Total Donated: $350</p>
                 </td>
 				<td>
-					<a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\parth.jpg" alt="" /></a>
+					<a href="https://www.paypal.me/mattllamas/50"/><img src="images\donators\robyn philips.jpg" alt="" /></a>
 					<h3>Robyn Philips</h3>
 					<p>Monthly Donation: $25</p>
 					<p>Total Donated: $150</p>
->>>>>>> b356a4334661f50a780012a3bf84dd4923328e26
                 </td>
 			</tr>
 			</table>
@@ -139,19 +92,19 @@
 			<table>
                 <tr>
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\anthony.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\ivor baudin.jpg" alt="" /></a>
 						<h3>Ivor Baudin</h3>
 						<p>Recently Donated: $150</p> 
 						<p>Total Donated: $450</p>
 					</td>	
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\josh.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\yancy norman.jpg" alt="" /></a>
 						<h3>Yancy Norman</h3>
 						<p>Recently Donated: $50</p>
 						<p>Total Donated: $250</p>
 					</td>
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\daniel.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\sharon brotz.jpg" alt="" /></a>
 						<h3>Sharon Brotz</h3>
 						<p>Recently Donated: $25</p>
 						<p>Total Donated: $100</p>
@@ -159,19 +112,19 @@
 				</tr>
 				<tr>
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\anthony.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\marcel baker.jpg" alt="" /></a>
 						<h3>Marcel Baker</h3>
 						<p>Recently Donated: $150</p> 
 						<p>Total Donated: $450</p>
 					</td>
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\josh.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\catrina blevins.jpg" alt="" /></a>
 						<h3>Catrina Blevins</h3>
 						<p>Recently Donated: $50</p>
 						<p>Total Donated: $250</p>
 					</td>
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\daniel.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\scottie gardiner.jpg" alt="" /></a>
 						<h3>Scottie Gardiner</h3>
 						<p>Recently Donated: $25</p>
 						<p>Total Donated: $100</p>
@@ -179,19 +132,19 @@
 				</tr>
 				 <tr>
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\anthony.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\sheridan frost.jpg" alt="" /></a>
 						<h3>Sheridan Frost</h3>
 						<p>Recently Donated: $150</p> 
 						<p>Total Donated: $450</p>
 					</td>	
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\josh.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\korbin claufield.jpg" alt="" /></a>
 						<h3>Korbin Caulfield</h3>
 						<p>Recently Donated: $50</p>
 						<p>Total Donated: $250</p>
 					</td>
 					<td>
-						<a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\daniel.jpg" alt="" /></a>
+						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\clarence park.jpg" alt="" /></a>
 						<h3>Clarence Park</h3>
 						<p>Recently Donated: $25</p>
 						<p>Total Donated: $100</p>
