--- a/src/contact.html
+++ b/src/contact.html
@@ -57,110 +57,102 @@
         		  </div>
         		</div>
 				  </div>
-    				<span class="byline"><div id="contactline"> <h4>If you are a donor and would like to update your personal information, make a donation or you have a
-general inquiry about making a donation please contact us below:</h4></span></div>
-			<p> Phone: <b>1300 228 000</b></p>
-			<p>Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">mail@actforkids.com.au</a></p>
-			<div id="office">
-			<h2><b>National office</b></h2> </div>
-			<p> 1/9 Gardner Cl, Brisbane City QLD 4064</p>
-			<div id="office">
-			<h2> Act for Kids Service centers </h2> </div>
-			<h4>Adelaide</h4>
-			275 Main North Road, Enfield, South Australia, Australia
-			<div>Phone: (08) 8440 8557</div>
-			<div>Fax: (08) 8440 8559</div>
-			<h4>Aurukun Safe House</h4>
-			229 Circular Way, Aurukun, QLD, 4871, Australia
-			<div>Phone: (07) 4060 6229</div>
-			<div>Fax: (07) 4060 6038</div>
-			<h4>Cairns</h4>
-			Unit 3, 202 Scott Street Bungalow, QLD, 4870
-			<div>Phone: (07) 4033 8500</div>
-			<div>Fax: (07) 4033 5811</div>
-			<h4>Cairns – SafeKIDS Program (servicing in Doomadgee & West Cape York)</h4>
-			Earlville, QLD, 4870, Australia
-			<div>Phone: (07) 4033 8517</div>
-			<div>Fax: (07) 4033 8575</div>
-			<h4>Doomadgee Safe House</h4>
-			Cnr Goodeedawa Road and Gunnulunja Drive, Doomadgee QLD 4830
-			<div>Phone: (07) 4745 8348</div>
-			<div>Fax: (07) 4745 8154</div>
-			<h4>Gympie</h4>
-			3 Clematis Street, Gympie, Queensland, Australia
-			<div>Phone: (07) 5483 9220</div>
-			<div>Fax: (07) 5482 5180</div>
-			<h4>Ipswich</h4>
-			Brisbane Street, Ipswich, QLD, 4305, Australia
-			<div>Phone: (07) 3202 1488</div>
-			<h4>Kowanyama Safe House</h4>
-			334-335 Karrenganang Street, Kowanyama QLD 4817
-			<div>Fax: (07) 4060 5031</div>
-			<h4>Labrador</h4>
-			Olsen Avenue, Labrador, Queensland, Australia
-			<div>Phone: (07) 5656 8600</div>
-			<h4>Maroochydore</h4>
-			33 Dalton Drive, Maroochydore, Queensland, Australia
-			<div>Phone: (07) 5451 8299 or 13 32 64</div>
-			<h4>Maryborough</h4>
-			111 Cheapside Street, Maryborough, Queensland, Australia
-			<div>Phone: (07) 4122 9100</div>
-			<h4>Nambour</h4>
-			76 Nambour Connection Road, Woombye, Queensland, Australia
-			<div>Phone: (07) 5442 1517</div>
-			<h4>Napranum Safe House</h4>
-			411 Moun-Ding Street, Napranum, QLD, 4874, Australia
-			<div>Phone: (07) 4069 9351</div>
-			<div>Fax: (07) 4069 9840</div>
-			<h4>Pormpuraaw Safe House</h4>
-			Crn Korka & Ngurrin Streets, Porpuraaw QLD 4871
-			<div>Phone: (07) 4060 4093</div>
-			<div>Fax: (07) 4060 4093</div>
-			<h4>Toowoomba / Roma</h4>
-			University of Southern Queensland, West Street, Darling Heights, Queensland, Australia
-			<div>Phone: (07) 4687 0200</div>
-			<div>Fax: 07 4613 5666</div>
-			<h4>Townsville</h4>
-			James Cook University, Endeavour Drive, Townsville, Queensland
-			<div>Phone: (07) 4755 8777</div>
-			<div>Fax: (07) 4755 8700</div>
-			<h4>West Burleigh</h4>
-			21 Tallebudgera Creek Road, Burleigh Heads, Queensland, Australia
-			<div>Phone: (07) 5508 3800</div>
-			<div>Fax: 07 5508 3811</div>
-			<h4>Western Sydney</h4>
-			18/125 Main Street, Blacktown, New South Wales, Australia
-			<div>Phone: (02) 9622 7636</div>
-			<div>Fax: (02) 9676 2663</div>
-			<h4>Wooloowin</h4>
-			80 Kedron Park Road, Wooloowin, Queensland, Australia
-			<div>Phone: (07) 3357 9444</div>
-			<div>Fax: (07) 3857 8626</div>
-			<br>
-			<br>
-			<div id="socialmedia">
-			<p><b>Join us on Social Media</b></p>
-			
-			<center><a href="https://www.facebook.com/ActforKids/">
-			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
-			</a>
-			<a href="https://twitter.com/ACTforKids">
-			<img border="0" alt="twitter widget" src="images/twitter widget.jpg" width="45px" height="35px">
-			</a>
-			<a href="https://www.instagram.com/actforkids/">
-			<img border="0" alt="instagram widget" src="images/instagram widget.jpg" width="45px" height="35px">
-			</a>
-			<a href="https://www.youtube.com/user/ACTforKids">
-			<img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="45px" height="35px">
-			</center></a>
-			</div>	
-   		</div>
-			</div>
+          <h4>If you are a donor and would like to update your personal information, make a donation or you have a general inquiry about making a donation please contact us below:</h4>
+      			<p>Phone: <b>1300 228 000</b></p>
+      			<p>Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">mail@actforkids.com.au</a></p>
+    			<h2>National office</h2>
+    			   <p>1/9 Gardner Cl, Brisbane City QLD 4064</p>
+    			<h2>Act for Kids Service centers</h2>
+    			<h4>Adelaide</h4>
+      			<p>275 Main North Road, Enfield, South Australia, Australia</p>
+      			<p>Phone: (08) 8440 8557</p>
+      			<p>Fax: (08) 8440 8559</p>
+    			<h4>Aurukun Safe House</h4>
+      			<p>229 Circular Way, Aurukun, QLD, 4871, Australia</p>
+      			<p>Phone: (07) 4060 6229</p>
+      			<p>Fax: (07) 4060 6038</p>
+    			<h4>Cairns</h4>
+      			<p>Unit 3, 202 Scott Street Bungalow, QLD, 4870</p>
+      			<p>Phone: (07) 4033 8500</p>
+      			<p>Fax: (07) 4033 5811</p>
+    			<h4>Cairns – SafeKIDS Program (servicing in Doomadgee & West Cape York)</h4>
+      			<p>Earlville, QLD, 4870, Australia</p>
+      			<p>Phone: (07) 4033 8517</p>
+      			<p>Fax: (07) 4033 8575</p>
+    			<h4>Doomadgee Safe House</h4>
+            <p>Cnr Goodeedawa Road and Gunnulunja Drive, Doomadgee QLD 4830</p>
+      			<p>Phone: (07) 4745 8348</p>
+      			<p>Fax: (07) 4745 8154</p>
+    			<h4>Gympie</h4>
+      			<p>3 Clematis Street, Gympie, Queensland, Australia</p>
+      			<p>Phone: (07) 5483 9220</p>
+      			<p>Fax: (07) 5482 5180</p>
+    			<h4>Ipswich</h4>
+      			<p>Brisbane Street, Ipswich, QLD, 4305, Australia</p>
+      			<p>Phone: (07) 3202 1488</p>
+    			<h4>Kowanyama Safe House</h4>
+      			<p>334-335 Karrenganang Street, Kowanyama QLD 4817</p>
+      			<p>Fax: (07) 4060 5031</p>
+    			<h4>Labrador</h4>
+      			<p>Olsen Avenue, Labrador, Queensland, Australia</p>
+      			<p>Phone: (07) 5656 8600</p>
+    			<h4>Maroochydore</h4>
+      			<p>33 Dalton Drive, Maroochydore, Queensland, Australia</p>
+      			<p>Phone: (07) 5451 8299 or 13 32 64</p>
+    			<h4>Maryborough</h4>
+      			<p>111 Cheapside Street, Maryborough, Queensland, Australia</p>
+      			<p>Phone: (07) 4122 9100</p>
+    			<h4>Nambour</h4>
+      			<p>76 Nambour Connection Road, Woombye, Queensland, Australia</p>
+      			<p>Phone: (07) 5442 1517</p>
+    			<h4>Napranum Safe House</h4>
+      			<p>411 Moun-Ding Street, Napranum, QLD, 4874, Australia</p>
+      			<p>Phone: (07) 4069 9351</p>
+      			<p>Fax: (07) 4069 9840</p>
+    			<h4>Pormpuraaw Safe House</h4>
+      			<p>Crn Korka & Ngurrin Streets, Porpuraaw QLD 4871</p>
+      			<p>Phone: (07) 4060 4093</p>
+      			<p>Fax: (07) 4060 4093</p>
+    			<h4>Toowoomba / Roma</h4>
+      			<p>University of Southern Queensland, West Street, Darling Heights, Queensland, Australia</p>
+      			<p>Phone: (07) 4687 0200</p>
+      			<p>Fax: 07 4613 5666</p>
+    			<h4>Townsville</h4>
+      			<p>James Cook University, Endeavour Drive, Townsville, Queensland</p>
+      			<p>Phone: (07) 4755 8777</p>
+      			<p>Fax: (07) 4755 8700</p>
+  			  <h4>West Burleigh</h4>
+      			<p>21 Tallebudgera Creek Road, Burleigh Heads, Queensland, Australia</p>
+      			<p>Phone: (07) 5508 3800</p>
+      			<p>Fax: 07 5508 3811</p>
+    			<h4>Western Sydney</h4>
+      			<p>18/125 Main Street, Blacktown, New South Wales, Australia</p>
+      			<p>Phone: (02) 9622 7636</p>
+      			<p>Fax: (02) 9676 2663</p>
+    			<h4>Wooloowin</h4>
+      			<p>80 Kedron Park Road, Wooloowin, Queensland, Australia</p>
+      			<p>Phone: (07) 3357 9444</p>
+      			<p>Fax: (07) 3857 8626</p>
+        </div>
+      </div>
 		</div>
-		</div>
-    </div>
     <div id="copyright">
-		<p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
+      <div id="socialmedia">
+        <p><b>Join us on Social Media</b></p>
+        <center><a href="https://www.facebook.com/ActforKids/">
+        <img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://twitter.com/ACTforKids">
+        <img border="0" alt="twitter widget" src="images/twitter widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://www.instagram.com/actforkids/">
+        <img border="0" alt="instagram widget" src="images/instagram widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://www.youtube.com/user/ACTforKids">
+        <img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="45px" height="35px">
+        </center></a>
+      </div>
+		  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
     </div>
   </body>
 </html>
