Map and small changes

--- a/src/contact.html
+++ b/src/contact.html
@@ -56,15 +56,15 @@
         		  </div>
         		</div>
 				  </div>
-    				<span class="byline"><div id="contactline"> <h4>If you are a donor and would like to update your personal information, make a donation or you have a
-general inquiry about making a donation please contact us below:</h4></span></div>
-			<p> Phone: <b>1300 228 000</b></p>
+    				<span class="byline"><div id="contactline"> <h4><i>If you are a donor and would like to update your personal information, make a donation or you have a
+general inquiry about making a donation please contact us below:</i></h4></span></div>
+			<p> Phone: <b>1300 228 000</b></p></i>
 			<p>Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">mail@actforkids.com.au</a></p>
 			<div id="office">
-			<h2><b>National office</b></h2> </div>
+			<h2><font face="Yu Gothic Medium" color="red"><b>National office</b></font></h2> </div>
 			<p> 1/9 Gardner Cl, Brisbane City QLD 4064</p>
 			<div id="office">
-			<h2> Act for Kids Service centers </h2> </div>
+			<h2><font face="Yu Gothic Medium" color="red"> Act for Kids Service centers</font> </h2> </div>
 			<h4>Adelaide</h4>
 			275 Main North Road, Enfield, South Australia, Australia
 			<div>Phone: (08) 8440 8557</div>
@@ -137,8 +137,9 @@ general inquiry about making a donation please contact us below:</h4></span></di
 			<div>Fax: (07) 3857 8626</div>
 			<br>
 			<br>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5006.131260477806!2d153.00136246793963!3d-27.473326160186225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9150bb32d644fb%3A0x9f28656164ff5cb8!2sAct+for+Kids!5e0!3m2!1sen!2sus!4v1500945736575" width="1200" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 			<div id="socialmedia">
-			<center><h2>Join us on Social Media</center> </h2></div>
+			<center><h2><font face="Yu Gothic Medium" color="red">Join us on Social Media</center></font> </h2></div>
 			<p>
 			<center><a href="https://www.facebook.com/ActforKids/">
 			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="65px" height="55px">
@@ -165,5 +166,7 @@ general inquiry about making a donation please contact us below:</h4></span></di
     <div id="copyright">
 		<p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
     </div>
+			</div>
+		</div>
   </body>
 </html>
