--- a/src/donators.html
+++ b/src/donators.html
@@ -94,9 +94,9 @@
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\ivor baudin.jpg" alt="" /></a>
 						<h3>Ivor Baudin</h3>
-						<p>Recently Donated: $150</p> 
+						<p>Recently Donated: $150</p>
 						<p>Total Donated: $450</p>
-					</td>	
+					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\yancy norman.jpg" alt="" /></a>
 						<h3>Yancy Norman</h3>
@@ -114,7 +114,7 @@
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\marcel baker.jpg" alt="" /></a>
 						<h3>Marcel Baker</h3>
-						<p>Recently Donated: $150</p> 
+						<p>Recently Donated: $150</p>
 						<p>Total Donated: $450</p>
 					</td>
 					<td>
@@ -134,9 +134,9 @@
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\sheridan frost.jpg" alt="" /></a>
 						<h3>Sheridan Frost</h3>
-						<p>Recently Donated: $150</p> 
+						<p>Recently Donated: $150</p>
 						<p>Total Donated: $450</p>
-					</td>	
+					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\korbin claufield.jpg" alt="" /></a>
 						<h3>Korbin Caulfield</h3>
@@ -156,6 +156,21 @@
       </div>
     </div>
     <div id="copyright">
+      <div id="socialmedia">
+        <p><b>Join us on Social Media</b></p>
+        <center><a href="https://www.facebook.com/ActforKids/">
+        <img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://twitter.com/ACTforKids">
+        <img border="0" alt="twitter widget" src="images/twitter widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://www.instagram.com/actforkids/">
+        <img border="0" alt="instagram widget" src="images/instagram widget.jpg" width="45px" height="35px">
+        </a>
+        <a href="https://www.youtube.com/user/ACTforKids">
+        <img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="45px" height="35px">
+        </center></a>
+      </div>
    	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
     </div>
   </body>
