--- a/src/about.html
+++ b/src/about.html
@@ -60,6 +60,7 @@
           </div>
     		</div>
       </div>
+    </div>
     <div id="copyright">
       <div id="socialmedia">
         <p><b>Join us on Social Media</b></p>
