--- a/src/_old/site-backups/25-07-17/working latest after lunch/contact.html
+++ b/src/_old/site-backups/25-07-17/working latest after lunch/contact.html
@@ -134,6 +134,8 @@
         			<p>80 Kedron Park Road, Wooloowin, Queensland, Australia</p>
         			<p>Phone: (07) 3357 9444</p>
         			<p>Fax: (07) 3857 8626</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5006.131260477806!2d153.00136246793963!3d-27.473326160186225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9150bb32d644fb%3A0x9f28656164ff5cb8!2sAct+for+Kids!5e0!3m2!1sen!2sus!4v1500945736575" width="930" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
           </div>
         </div>
       </div>
