Updated Donator Info
((safely))

--- a/src/donators.html
+++ b/src/donators.html
@@ -94,39 +94,40 @@
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\ivor baudin.jpg" alt="" /></a>
 						<h3>Ivor Baudin</h3>
-						<p>Recently Donated: $150</p>
-						<p>Total Donated: $450</p>
-					</td>
+						<p>Total Donated: $745</p>
+						<p>Recently Donated: $150</p> 
+					</td>	
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\yancy norman.jpg" alt="" /></a>
 						<h3>Yancy Norman</h3>
-						<p>Recently Donated: $50</p>
-						<p>Total Donated: $250</p>
+						<p>Total Donated: $673</p>
+						<p>Recently Donated: $23</p>
 					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\sharon brotz.jpg" alt="" /></a>
 						<h3>Sharon Brotz</h3>
-						<p>Recently Donated: $25</p>
-						<p>Total Donated: $100</p>
+						<p>Total Donated: $600
+						<p>Recently Donated: $70</p>
 					</td>
 				</tr>
 				<tr>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\marcel baker.jpg" alt="" /></a>
 						<h3>Marcel Baker</h3>
-						<p>Recently Donated: $150</p>
-						<p>Total Donated: $450</p>
+						<p>Total Donated: $499</p>
+						<p>Recently Donated: $19</p> 
+						
 					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\catrina blevins.jpg" alt="" /></a>
 						<h3>Catrina Blevins</h3>
-						<p>Recently Donated: $50</p>
+						<p>Total Donated: $450</p>
 						<p>Total Donated: $250</p>
 					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\scottie gardiner.jpg" alt="" /></a>
 						<h3>Scottie Gardiner</h3>
-						<p>Recently Donated: $25</p>
+						<p>Recently Donated: $300</p>
 						<p>Total Donated: $100</p>
 					</td>
 				</tr>
@@ -134,20 +135,20 @@
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\sheridan frost.jpg" alt="" /></a>
 						<h3>Sheridan Frost</h3>
-						<p>Recently Donated: $150</p>
-						<p>Total Donated: $450</p>
-					</td>
+						<p>Total Donated: $150</p> 
+						<p>Recently Donated: $50</p>
+					</td>	
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\korbin claufield.jpg" alt="" /></a>
 						<h3>Korbin Caulfield</h3>
-						<p>Recently Donated: $50</p>
-						<p>Total Donated: $250</p>
+						<p>Total Donated: $93</p>
+						<p>Recently Donated: $25</p>
 					</td>
 					<td>
 						<a href="https://www.paypal.me/mattllamas/50"><img src="images\donators\clarence park.jpg" alt="" /></a>
 						<h3>Clarence Park</h3>
-						<p>Recently Donated: $25</p>
-						<p>Total Donated: $100</p>
+						<p>Total Donated: $27</p>
+						<p>Recently Donated: $27</p>
 					</td>
 				</tr>
             </table>
