Changes to text

--- a/src/contact.html
+++ b/src/contact.html
@@ -58,7 +58,7 @@
         		</div>
 				  </div>
           <div>
-            <h4>If you are a donor and would like to update your personal information, make a donation or you have a general inquiry about making a donation please contact us below:</h4>
+            <h4>If you are a donor and would like to update your personal information, make a donation or have a general inquiry about making a donation please contact us below:</h4>
         			<p>Phone: <b>1300 228 000</b></p>
         			<p>Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">mail@actforkids.com.au</a></p>
       			<h2 id="red">National office</h2>
