Made header sticky

--- a/src/donate.html
+++ b/src/donate.html
@@ -37,17 +37,19 @@
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
     	</div>
-  		<div id="content">
-				<div class="title">
-					<h1>Make a Donation</h1>
-					<p>Every little bit helps. Act for Kids relies heavily on donations to support our intensive therapy programs for kids who have experienced abuse and neglect, and early support for families at risk. Your donation will help us keep our doors open and expand our services – our kids can’t thank you directly, but know you’ve made a big difference to little lives.</p>
-					<h3>Single Donation</h3>
-					<p>Donations over $2 are tax deductible. Every donation, big or small, combines to make a real difference.</p>
-        	<h3>Monthly Donation</h3>
-					<p>Becoming a Kids’ Crusader and donating monthly is the best way to help us help kids and families</p>
-          <p>Every donation helps kids all over Australia. By donating, you will have a place in the donator's wall of fame.</p>
-          <h4>You can send your donation to us in different ways. Find out how you can <a href="donate-offline.html">donate offline</a>&nbsp;or&nbsp;call 1300 228 000</h4>
-      		<iframe class="donate-iframe" src="https://support.actforkids.com.au/iframe-donation-form" scrolling="no">&lt;br /&gt; iFrame not supported.&lt;br /&gt;</iframe>
+  		<div id="page">
+        <div id="content">
+  				<div class="title">
+  					<h1>Make a Donation</h1>
+  					<p>Every little bit helps. Act for Kids relies heavily on donations to support our intensive therapy programs for kids who have experienced abuse and neglect, and early support for families at risk. Your donation will help us keep our doors open and expand our services – our kids can’t thank you directly, but know you’ve made a big difference to little lives.</p>
+  					<h3>Single Donation</h3>
+  					<p>Donations over $2 are tax deductible. Every donation, big or small, combines to make a real difference.</p>
+          	<h3>Monthly Donation</h3>
+  					<p>Becoming a Kids’ Crusader and donating monthly is the best way to help us help kids and families</p>
+            <p>Every donation helps kids all over Australia. By donating, you will have a place in the donator's wall of fame.</p>
+            <h4>You can send your donation to us in different ways. Find out how you can <a href="donate-offline.html">donate offline</a>&nbsp;or&nbsp;call 1300 228 000</h4>
+        		<iframe class="donate-iframe" src="https://support.actforkids.com.au/iframe-donation-form" scrolling="no">&lt;br /&gt; iFrame not supported.&lt;br /&gt;</iframe>
+          </div>
         </div>
       </div>
     </div>
