changed heading font colours to red

--- a/src/donators.html
+++ b/src/donators.html
@@ -40,11 +40,11 @@
       <div id="page">
     		<div id="content">
           <div class="title">
-            <h1>Thanks to All of Our Wonderful Donators!</h1>
+            <h1 id="red">Thanks to All of Our Wonderful Donators!</h1>
             <p>We at Act for Kids would like to thank all of our wonderful donators for their generous contributions to act for kids to support our cause.</p>
           </div>
           <div class="donator-grid">
-			<h2>Monthly Donators</h2>
+			<h2 id="red">Monthly Donators</h2>
             <table>
 				<tr>
                 <td>
@@ -87,7 +87,7 @@
                 </td>
 			</tr>
 			</table>
-			<h2> Single Payment Donators
+			<h2 id="red"> Single Payment Donators</h2>
 			<br></br>
 			<table>
                 <tr>
