--- a/src/about.html
+++ b/src/about.html
@@ -40,21 +40,21 @@
     	<div id="page">
     		<div id="content">
 			    <img src="images\about picture.png" alt="bear logo" width=100%>
-				  <h2>About Act for kids</h2>
+				  <h2 id="red">About Act for kids</h2>
   				<div>
             <p>Act for Kids is an Australian charity providing free therapy and support services to children and families who have experienced, or are at risk of child abuse and neglect. We have helped thousands of children and families for over 28 years. Act for Kids operates 22 centres with a team of over 300 staff from Adelaide all the way up to the Cape York Peninsula. Our services have expanded to include integrated therapy, support for vulnerable families, special workshops to empower kids and safe houses in remote Aboriginal communities.</p>
           </div>
           <div class="thirds">
             <div>
-              <h3>Our Purpose</h3>
+              <h3 id="red">Our Purpose</h3>
               <p><center>To prevent and treat child abuse and neglect.</center></p>
             </div>
             <div>
-              <h3>Our Vision</h3>
+              <h3 id="red">Our Vision</h3>
               <p><center>All kids have a safe and happy childhood, free from abuse and neglect.</center></p>
             </div>
             <div>
-              <h3>Our Values</h3>
+              <h3 id="red">Our Values</h3>
               <p><center>We are a professional, ethical team who is caring, courageous and collaborative.</center></p>
             </div>
           </div>
