--- a/src/donate-offline.html
+++ b/src/donate-offline.html
@@ -41,7 +41,7 @@
     		<div id="content">
     			<div>
     				<header class="page-header">
-  <h1><center>Donate offline</center></h1>
+  <h1 id="red"><center>Donate offline</center></h1>
 </header>
 <p style="text-align: left;"><strong>By phone</strong></p>
 <p style="text-align: left;">To make a donation with your debit or credit card over the phone, please call our office on <a style="display: inline-block;" href="tel:1300228000">1300 228 000</a>.</p>
