--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     	<div id="page">
     		<div id="content">
           <div class="title">
-            <h1>Welcome to Act For Kids!</h1>
+            <h1 id="red">Welcome to Act For Kids!</h1>
           </div>
           <div class="slideshow-container">
             <div class="mySlides fade">
@@ -76,7 +76,7 @@
             </script>
           </div>
           <div class="article">
-            <h2> A Quick Bit About Us</h2>
+            <h2 id="red"> A Quick Bit About Us</h2>
             <p>Act for Kids is an Australian charity providing free therapy and support services to children and families who have experienced, or are at risk of child abuse and neglect. We have helped thousands of children and families for over 28 years. Act for Kids operates 22 centres with a team of over 300 staff from Adelaide all the way up to the Cape York Peninsula. Our services have expanded to include integrated therapy, support for vulnerable families, special workshops to empower kids and safe houses in remote Aboriginal communities.</p>
 		      </div>
         </div>
