--- a/src/support.html
+++ b/src/support.html
@@ -40,7 +40,7 @@
       <div id="page">
     		<div id="content">
           <div class="title">
-            <h1>Support The Development Team!</h1>
+            <h1 id="red">Support The Development Team!</h1>
             <p>Thanks for browsing through our site, we hope you enjoyed it. All this was made possible thanks to the brlliant developers from the Iron Squad at QAT. Feel free to help us out by donating to the induviduals who put this site together. Thanks for your support :)
           </div>
           <div class="support-grid">
