--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                       }
                     slideIndex++;
                     if (slideIndex> slides.length) {slideIndex = 1}
-                    slides[slideIndex-1].style.display = "block";
+                    slides[slideIndex-1].style.display = "static";
                     setTimeout(showSlides, 4000); // Change image every 4 seconds
                   }
             </script>
